<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kuka_robot_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="deshmukhabhi02@gmail.com">abhishek</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>pluginlib</depend>
  <depend>transmission_interface</depend>
  <depend>urdf</depend>
  <depend>controller_interface</depend>
  <depend>control_toolbox</depend>
  <depend>joint_limits_interface</depend>
  <depend>robot_state_publisher</depend>
    
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
